Create a delegating class with no translation